public interface TodoItem {
    String getText();
    void setText(String text);
    boolean isCompleted();
    void setCompleted(boolean completed);
}
